tests/baselines/reference/parserInvocationOfMemberAccessOffOfObjectCreationExpression1.errors.txt
parserInvocationOfMemberAccessOffOfObjectCreationExpression1.ts(1,5): error TS2304: Cannot find name 'A'.


==== parserInvocationOfMemberAccessOffOfObjectCreationExpression1.ts (1 errors) ====
    new A().b()
        ~
!!! error TS2304: Cannot find name 'A'.